tests/NormalTests/paczka1/small_fuzzy/94609212.err
Error in line 4: 9q3uODsq A93 49,6
Error in line 11: zyQX6j S592 52,4
